# simple_cnn

./: CMakeLists.txt  README.md
CNN/: byteswap.h  cnn.h  conv_layer_t.h  dropout_layer_t.h  fc_layer.h  gradient_t.h  layer_t.h  optimization_method.h  point_t.h  pool_layer_t.h  relu_layer_t.h  tensor_t.h  types.h  utils.h
Example MNIST/: README.md  example1.cpp  example2.cpp  example3.cpp  example4.cpp  test.cpp
